--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/multiagentesTrem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jade.jar=G:\\Julio Cezar Zomer\\Documents\\Agente0017\\src\\lib\\jade.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jade.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
